# focus-flow

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: break.json  default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: break_overlay.rs  lib.rs  tray.rs
src/components/audio/: NowPlaying.tsx  useAudioEngine.ts
src/components/break/: BreakOverlay.tsx  useBreakEnforcement.ts
src/components/screens/: SceneScreen.tsx  SettingsScreen.tsx  SoundsScreen.tsx  StatsScreen.tsx  TasksScreen.tsx  TimerScreen.tsx
src/components/shell/: Rail.tsx
src/components/stats/: FocusBarChart.tsx  MonthHeatmap.tsx  SummaryCards.tsx  TaskBreakdown.tsx
src/components/system/: useSystemIntegration.ts
src/components/tasks/: DaySwitcher.tsx  TaskInput.tsx  TaskItem.tsx
src/components/timer/: ModeTabs.tsx  SessionDots.tsx  TimerCard.tsx  TimerControls.tsx  useTimerEngine.ts
src/components/ui/: Slider.tsx
src/lib/: audio.ts  backgrounds.ts  datetime.ts  db.ts  export.ts  media.ts  notify.ts  queries.ts  stats.ts  system.ts  theme.ts  time.ts  tracks.ts
src/stores/: appearanceStore.ts  audioStore.ts  settingsStore.ts  taskStore.ts  timerStore.ts  uiStore.ts
src/styles/: index.css  tokens.css
