[package]
name = "focus-flow-app"
version = "0.1.0"
description = "An offline-only desktop Pomodoro timer with ambient sounds, custom backgrounds, daily to-dos, statistics, and full-screen break enforcement."
authors = ["Michael <hungbomichael@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focus_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

# Transitive pin: time 0.3.48 (time-macros 0.2.28) generates an impl that trips
# a spurious E0119 coherence error in tauri-utils/cookie on rustc 1.90–1.96.
# 0.3.47 compiles cleanly and satisfies cookie's `^0.3.47`. Remove once upstream
# `time` ships a fix. Pulled in only transitively (via tauri -> cookie).
time = "=0.3.47"

